crates/mun_codegen/src/snapshots/mun_codegen__test__bit_op_u16.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn not(a: u16) -> u16 { !a }\n    pub fn bitand(a: u16, b: u16) -> u16 { a & b }\n    pub fn bitor(a: u16, b: u16) -> u16 { a | b }\n    pub fn bitxor(a: u16, b: u16) -> u16 { a ^ b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i16 @not(i16 %0) {
body:
  %not = xor i16 %0, -1
  ret i16 %not
}

define i16 @bitand(i16 %0, i16 %1) {
body:
  %bit_and = and i16 %0, %1
  ret i16 %bit_and
}

define i16 @bitor(i16 %0, i16 %1) {
body:
  %bit_or = or i16 %0, %1
  ret i16 %bit_or
}

define i16 @bitxor(i16 %0, i16 %1) {
body:
  %bit_xor = xor i16 %0, %1
  ret i16 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
