crates/mun_codegen/src/snapshots/mun_codegen__test__bit_op_u8.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn not(a: u8) -> u8 { !a }\n    pub fn bitand(a: u8, b: u8) -> u8 { a & b }\n    pub fn bitor(a: u8, b: u8) -> u8 { a | b }\n    pub fn bitxor(a: u8, b: u8) -> u8 { a ^ b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i8 @not(i8 %0) {
body:
  %not = xor i8 %0, -1
  ret i8 %not
}

define i8 @bitand(i8 %0, i8 %1) {
body:
  %bit_and = and i8 %0, %1
  ret i8 %bit_and
}

define i8 @bitor(i8 %0, i8 %1) {
body:
  %bit_or = or i8 %0, %1
  ret i8 %bit_or
}

define i8 @bitxor(i8 %0, i8 %1) {
body:
  %bit_xor = xor i8 %0, %1
  ret i8 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
