crates/mun_codegen/src/snapshots/mun_codegen__test__compare_op_i64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn equals(a: i64, b: i64) -> bool { a == b }\n    pub fn not_equal(a: i64, b: i64) -> bool { a != b}\n    pub fn less(a: i64, b: i64) -> bool { a < b }\n    pub fn less_equal(a: i64, b: i64) -> bool { a <= b }\n    pub fn greater(a: i64, b: i64) -> bool { a > b }\n    pub fn greater_equal(a: i64, b: i64) -> bool { a >= b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [2 x i64*]

define i1 @equals(i64 %0, i64 %1) {
body:
  %eq = icmp eq i64 %0, %1
  ret i1 %eq
}

define i1 @not_equal(i64 %0, i64 %1) {
body:
  %neq = icmp ne i64 %0, %1
  ret i1 %neq
}

define i1 @less(i64 %0, i64 %1) {
body:
  %less = icmp slt i64 %0, %1
  ret i1 %less
}

define i1 @less_equal(i64 %0, i64 %1) {
body:
  %lesseq = icmp sle i64 %0, %1
  ret i1 %lesseq
}

define i1 @greater(i64 %0, i64 %1) {
body:
  %greater = icmp sgt i64 %0, %1
  ret i1 %greater
}

define i1 @greater_equal(i64 %0, i64 %1) {
body:
  %greatereq = icmp sge i64 %0, %1
  ret i1 %greatereq
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [2 x i64*] zeroinitializer
