crates/mun_codegen/src/snapshots/mun_codegen__test__compare_op_u16.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn equals(a: u16, b: u16) -> bool { a == b }\n    pub fn not_equal(a: u16, b: u16) -> bool { a != b}\n    pub fn less(a: u16, b: u16) -> bool { a < b }\n    pub fn less_equal(a: u16, b: u16) -> bool { a <= b }\n    pub fn greater(a: u16, b: u16) -> bool { a > b }\n    pub fn greater_equal(a: u16, b: u16) -> bool { a >= b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [2 x i64*]

define i1 @equals(i16 %0, i16 %1) {
body:
  %eq = icmp eq i16 %0, %1
  ret i1 %eq
}

define i1 @not_equal(i16 %0, i16 %1) {
body:
  %neq = icmp ne i16 %0, %1
  ret i1 %neq
}

define i1 @less(i16 %0, i16 %1) {
body:
  %less = icmp ult i16 %0, %1
  ret i1 %less
}

define i1 @less_equal(i16 %0, i16 %1) {
body:
  %lesseq = icmp ule i16 %0, %1
  ret i1 %lesseq
}

define i1 @greater(i16 %0, i16 %1) {
body:
  %greater = icmp ugt i16 %0, %1
  ret i1 %greater
}

define i1 @greater_equal(i16 %0, i16 %1) {
body:
  %greatereq = icmp uge i16 %0, %1
  ret i1 %greatereq
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [2 x i64*] zeroinitializer
